added universal theme and colors